--- a/to/manifest.json
+++ b/to/manifest.json
@@ -1,20 +1,30 @@
 {
-  "name": "האפליקציה שלי",
-  "short_name": "PWA שלי",
-  "start_url": "/index.html",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": [
+  "manifest_version": 3,
+  "name": "Gmail Markdown Previewer",
+  "description": "Write in Markdown or HTML and preview live. Insert the rendered HTML into your Gmail draft.",
+  "version": "1.0.0",
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "content_scripts": [
     {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "matches": [
+        "https://mail.google.com/*"
+      ],
+      "js": [
+        "lib/marked.min.js",
+        "content.js"
+      ],
+      "css": [
+        "panel.css"
+      ],
+      "run_at": "document_idle"
     }
+  ],
+  "permissions": [],
+  "host_permissions": [
+    "https://mail.google.com/*"
   ]
 }
